Add gpu reset endpoint
